[package]
name = "pokemons-in-shakespeare"
version = "0.1.0"
authors = ["Alexander Voronov <alexander.a.voronov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default_features = false }
tokio = { version = "1.4", default_features = false, features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
warp = { version = "0.3", default_features = false, features = ["tokio-rustls"] }
chashmap = "2.2"
url = "2.2"
